tests/snapshots/emits_div_by_zero_note.snap
---
source: tests/m03.rs
expression: result
---
Ok(
    [
        FrameEnter {
            frame_id: FrameId(
                0,
            ),
            fn_name: "main",
            params: [],
            span: Span {
                start: 0,
                end: 32,
                file: FileId(
                    1,
                ),
            },
        },
        Note {
            kind: RuntimeError,
            message: "division by zero",
            span: Span {
                start: 24,
                end: 29,
                file: FileId(
                    1,
                ),
            },
        },
    ],
)
