tests/snapshots/emits_fn_call.snap
---
source: tests/m03.rs
expression: result
---
Ok(
    [
        FrameEnter {
            frame_id: FrameId(
                0,
            ),
            fn_name: "main",
            span: Span {
                start: 45,
                end: 81,
                file: FileId(
                    1,
                ),
            },
        },
        FrameEnter {
            frame_id: FrameId(
                1,
            ),
            fn_name: "add",
            span: Span {
                start: 0,
                end: 43,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                0,
            ),
            name: "a",
            ty: I32,
            span: Span {
                start: 7,
                end: 13,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                0,
            ),
            value: Int(
                2,
            ),
            span: Span {
                start: 7,
                end: 13,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                1,
            ),
            name: "b",
            ty: I32,
            span: Span {
                start: 15,
                end: 21,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                1,
            ),
            value: Int(
                3,
            ),
            span: Span {
                start: 15,
                end: 21,
                file: FileId(
                    1,
                ),
            },
        },
        ReturnValue {
            frame_id: FrameId(
                1,
            ),
            value: Int(
                5,
            ),
            span: Span {
                start: 36,
                end: 41,
                file: FileId(
                    1,
                ),
            },
        },
        FrameLeave {
            frame_id: FrameId(
                1,
            ),
            return_value: Int(
                5,
            ),
            span: Span {
                start: 30,
                end: 43,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                2,
            ),
            name: "r",
            ty: I32,
            span: Span {
                start: 61,
                end: 79,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                2,
            ),
            value: Int(
                5,
            ),
            span: Span {
                start: 61,
                end: 79,
                file: FileId(
                    1,
                ),
            },
        },
        ReturnValue {
            frame_id: FrameId(
                0,
            ),
            value: Unit,
            span: Span {
                start: 55,
                end: 81,
                file: FileId(
                    1,
                ),
            },
        },
        FrameLeave {
            frame_id: FrameId(
                0,
            ),
            return_value: Unit,
            span: Span {
                start: 55,
                end: 81,
                file: FileId(
                    1,
                ),
            },
        },
    ],
)
