tests/snapshots/emits_if_else.snap
---
source: tests/m03.rs
expression: result
---
Ok(
    [
        FrameEnter {
            frame_id: FrameId(
                0,
            ),
            fn_name: "main",
            span: Span {
                start: 0,
                end: 52,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                0,
            ),
            name: "v",
            ty: Int(
                I32,
            ),
            span: Span {
                start: 16,
                end: 50,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                0,
            ),
            value: Int {
                kind: I32,
                bits: 2,
            },
            span: Span {
                start: 16,
                end: 50,
                file: FileId(
                    1,
                ),
            },
        },
        ReturnValue {
            frame_id: FrameId(
                0,
            ),
            value: Unit,
            span: Span {
                start: 10,
                end: 52,
                file: FileId(
                    1,
                ),
            },
        },
        FrameLeave {
            frame_id: FrameId(
                0,
            ),
            return_value: Unit,
            span: Span {
                start: 10,
                end: 52,
                file: FileId(
                    1,
                ),
            },
        },
    ],
)
