tests/snapshots/emits_shadow.snap
---
source: tests/m03.rs
expression: result
---
Ok(
    [
        FrameEnter {
            frame_id: FrameId(
                0,
            ),
            fn_name: "main",
            params: [],
            span: Span {
                start: 0,
                end: 44,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                0,
            ),
            name: "x",
            ty: I32,
            span: Span {
                start: 16,
                end: 26,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                0,
            ),
            value: Int(
                5,
            ),
            span: Span {
                start: 16,
                end: 26,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                1,
            ),
            name: "x",
            ty: I32,
            span: Span {
                start: 31,
                end: 42,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                1,
            ),
            value: Int(
                10,
            ),
            span: Span {
                start: 31,
                end: 42,
                file: FileId(
                    1,
                ),
            },
        },
        SlotDrop {
            slot_id: SlotId(
                1,
            ),
            span: Span {
                start: 31,
                end: 42,
                file: FileId(
                    1,
                ),
            },
        },
        SlotDrop {
            slot_id: SlotId(
                0,
            ),
            span: Span {
                start: 16,
                end: 26,
                file: FileId(
                    1,
                ),
            },
        },
        FrameLeave {
            frame_id: FrameId(
                0,
            ),
            return_value: Unit,
            span: Span {
                start: 10,
                end: 44,
                file: FileId(
                    1,
                ),
            },
        },
    ],
)
