tests/snapshots/emits_short_circuit.snap
---
source: tests/m03.rs
expression: result
---
Ok(
    [
        FrameEnter {
            frame_id: FrameId(
                0,
            ),
            fn_name: "main",
            span: Span {
                start: 0,
                end: 112,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                0,
            ),
            name: "a",
            ty: Bool,
            span: Span {
                start: 16,
                end: 29,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                0,
            ),
            value: Bool(
                true,
            ),
            span: Span {
                start: 16,
                end: 29,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                1,
            ),
            name: "b",
            ty: Bool,
            span: Span {
                start: 34,
                end: 60,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                1,
            ),
            value: Bool(
                true,
            ),
            span: Span {
                start: 34,
                end: 60,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                2,
            ),
            name: "c",
            ty: Bool,
            span: Span {
                start: 65,
                end: 79,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                2,
            ),
            value: Bool(
                false,
            ),
            span: Span {
                start: 65,
                end: 79,
                file: FileId(
                    1,
                ),
            },
        },
        SlotAlloc {
            slot_id: SlotId(
                3,
            ),
            name: "d",
            ty: Bool,
            span: Span {
                start: 84,
                end: 110,
                file: FileId(
                    1,
                ),
            },
        },
        SlotWrite {
            slot_id: SlotId(
                3,
            ),
            value: Bool(
                false,
            ),
            span: Span {
                start: 84,
                end: 110,
                file: FileId(
                    1,
                ),
            },
        },
        ReturnValue {
            frame_id: FrameId(
                0,
            ),
            value: Unit,
            span: Span {
                start: 10,
                end: 112,
                file: FileId(
                    1,
                ),
            },
        },
        FrameLeave {
            frame_id: FrameId(
                0,
            ),
            return_value: Unit,
            span: Span {
                start: 10,
                end: 112,
                file: FileId(
                    1,
                ),
            },
        },
    ],
)
