tests/snapshots/errors_on_arg_mismatch.snap
---
source: tests/m02.rs
expression: result
---
Err(
    ParseError {
        message: "argument 1: expected `bool`, found `i32`",
        span: Span {
            start: 70,
            end: 71,
            file: FileId(
                1,
            ),
        },
    },
)
